MFC r240955 (partial): Remove unsupported "-r" option from zfs send.

Illumos issued covered:
2811 missing implementation: zfs send -r

PR:	kern/171761

Former-commit-id: 65c164e60dbc17b5fa3207c39e9055bda8583121